# endstone-qqsync-webui-plugin

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/endstone_qqsync_webui_plugin/: __init__.py  api.py  config.py  qqsync_webui_plugin.py  server.py
src/endstone_qqsync_webui_plugin/static/css/: custom.css
src/endstone_qqsync_webui_plugin/static/js/: main.js
src/endstone_qqsync_webui_plugin/templates/: base.html  config.html  dashboard.html  users.html
